--- a/css_file/global.css
+++ b/css_file/global.css
@@ -1,5 +1,7 @@
 /* =========================== body =========================== */
 body {
+    height: 100%;
+    min-height: 100%;
     background-color: rgba(0, 0, 0, 0.90);
     color: white;
     width: 60%;
@@ -22,7 +24,7 @@ nav {
     font-size: x-large;
     font-family: 'Times New Roman', Times, serif;
 }
-nav ul {
+menu {
     display: flex;
     gap: 3em;
 }
