--- a/css_file/about.css
+++ b/css_file/about.css
@@ -14,12 +14,12 @@
 }
 
 .self_intro_content {
-    overflow: auto;
     margin-left: 5%;
     padding: 5% 0 5% 0;
     text-indent: 1em;
     font-size: medium;
     line-height:25px;
+    overflow: auto;
 }
 
 h2 {
@@ -35,4 +35,71 @@ h2 {
 .link:hover {
     text-decoration: underline;
     color: rgb(4, 213, 255);
+}
+
+/* =========================== pad device =========================== */
+
+@media only screen and (max-width: 1024px) {
+    .self_intro{
+        text-align: center;
+
+    }
+    .self_intro_img {
+        float: none;
+        padding: 0;
+        display: block;
+        height: max-content;
+        width: auto;
+        float: none;
+
+    }
+    .my_img {
+        height: 200px;
+        width: 200px;
+    }
+    
+    .self_intro_content {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+        font-size: medium;
+        line-height:25px;
+        overflow: none;
+    }
+
+}
+
+/* =========================== phone device =========================== */
+@media only screen and (max-width: 768px) {
+    .language_change {
+        text-align: center;
+    }
+    
+    .self_intro{
+        text-align: center;
+
+    }
+    .self_intro_img {
+        float: none;
+        padding: 0;
+        display: block;
+        height: max-content;
+        width: auto;
+        float: none;
+
+    }
+    .my_img {
+        margin-top: 50px;
+        height: 150px;
+        width: 150px;
+    }
+    
+    .self_intro_content {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+        font-size: medium;
+        line-height:25px;
+        overflow: none;
+    }
 }
