--- a/css_file/global.css
+++ b/css_file/global.css
@@ -4,7 +4,7 @@ body {
     min-height: 100%;
     background-color: rgba(0, 0, 0, 0.90);
     color: white;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
 } 
 
@@ -47,24 +47,27 @@ nav a:hover {
 
 /* =========================== footer =========================== */
 footer{
+    width: 100%;
+    margin: 0 auto;
     clear: both;
 }
 .footer_info {
     display: flex;
 }
 footer ul {
-    padding: 5% 5% 5% 0;
+    position: relative;
+    left: 0;
+    bottom: 0;
 }
 footer li {
     list-style-type: none;
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
 }
 .footer_copyright {
-    margin-top: 10px;
-    padding: 5% 0 5% 5%;
     float: right;
     color: rgba(255, 255, 255, 0.5);
+    margin-top: 2%;
 }
 footer img {
     width: 30px;
@@ -75,4 +78,116 @@ footer img {
 /* =========================== main =========================== */
 main {
     clear: both;
+}
+
+
+/* =========================== pad device =========================== */
+
+@media only screen and (max-width: 1024px) {
+    body {
+        width: 90%;
+        height: 100%;
+    }
+    
+    /* ===== header ===== */
+    header {
+        position: relative;
+        padding: 20px 20px 20px 0;
+        float: none;
+        font-size: x-large;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    
+    /* ===== nav ===== */
+    nav {
+        position: relative;
+        float:none;
+        font-size: x-large;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    menu {
+        display: block;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    nav li {
+        padding: 10px;
+    }
+    
+    
+    /* ===== footer ===== */
+    footer{
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .footer_info {
+        display: flex;
+    }
+    footer ul {
+        position: relative;
+        left: 0;
+        bottom: 0;
+    }
+    footer li {
+        display: inline-block;
+    }
+    footer img {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+
+/* =========================== phone device =========================== */
+
+@media only screen and (max-width: 768px) {
+    body {
+        width: 90%;
+        height: 100%;
+    }
+    
+    /* ===== header ===== */
+    header {
+        position: relative;
+        padding: 20px 20px 20px 0;
+        float: none;
+        font-size: x-large;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    
+    /* ===== nav ===== */
+    nav {
+        position: relative;
+        float:none;
+        font-size: x-large;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    menu {
+        display: block;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    nav li {
+        padding: 10px;
+    }
+    
+    
+    /* ===== footer ===== */
+    footer{
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .footer_info {
+        width: max-content;
+        margin: 0 auto;
+    }
+    .footer_copyright {
+        float: none;
+        color: rgba(255, 255, 255, 0.5);
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
 }
