--- a/css_file/global.css
+++ b/css_file/global.css
@@ -94,7 +94,7 @@ main {
         position: relative;
         padding: 20px 20px 20px 0;
         float: none;
-        font-size: x-large;
+        font-size: large;
         font-family: 'Times New Roman', Times, serif;
     }
     
@@ -102,7 +102,7 @@ main {
     nav {
         position: relative;
         float:none;
-        font-size: x-large;
+        font-size: large;
         font-family: 'Times New Roman', Times, serif;
     }
     menu {
@@ -143,7 +143,7 @@ main {
 
 /* =========================== phone device =========================== */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 500px) {
     body {
         width: 90%;
         height: 100%;
@@ -154,7 +154,7 @@ main {
         position: relative;
         padding: 20px 20px 20px 0;
         float: none;
-        font-size: x-large;
+        font-size: medium;
         font-family: 'Times New Roman', Times, serif;
     }
     
@@ -162,7 +162,7 @@ main {
     nav {
         position: relative;
         float:none;
-        font-size: x-large;
+        font-size: medium;
         font-family: 'Times New Roman', Times, serif;
     }
     menu {
